# Gomoku

./: Makefile  README.md  compileWindows.sh  pbrain-gomoku-ai
include/: Game.hpp  Gomoku.hpp  IA.hpp
src/: Gomoku.cpp  Main.cpp  Start.cpp  Tools.cpp
src/IA/: Evaluate.cpp  IA.cpp
src/game/: Cmd.cpp  Game.cpp
tests/: CmdTest.cpp
windows/: CMakeLists.txt  clean.sh
